optimizations + fix the help command